--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -1,9 +1,7 @@
-import * as S from './styles'
+import * as S from './{{dashCase name}}-styles'
 
-const {{pascalCase name}} = () => (
+export const {{pascalCase name}} = () => (
   <S.Wrapper>
     <h1>{{pascalCase name}}</h1>
   </S.Wrapper>
 )
-
-export default {{pascalCase name}}
